@@ -1,3 +1,4 @@
 #Properties file for org.eclipse.linuxtools.valgrind.cachegrind
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Cachegrind Plug-in
+cachegrindLaunchConfiguration.name.0=Cache Usage [Valgrind]
