@@ -17,5 +17,18 @@
             definitionId="org.eclipse.linuxtools.valgrind.launch.cachegrind">
       </view>
    </extension>
+   <extension
+         point="org.eclipse.linuxtools.profiling.launch.launchProvider">
+      <provider
+            default="false"
+            delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            id="org.eclipse.linuxtools.profiling.provider.valgrind.cachegrind"
+            name="%cachegrindLaunchConfiguration.name.0"
+            priority="2"
+            shortcut="org.eclipse.linuxtools.internal.valgrind.cachegrind.CachegrindLaunchShortcut"
+            tabgroup="org.eclipse.linuxtools.internal.valgrind.cachegrind.CachegrindLaunchConfigurationTabGroup"
+            type="memory">
+      </provider>
+   </extension>   
 
 </plugin>
