@@ -1,3 +1,13 @@
+2012-09-28  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindLaunchConfigurationTabGroup.java: New file.
+	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindLaunchShortcut.java: New file.
+	* META-INF/MANIFEST.MF: Add needed imports. 
+	* plugin.properties: Add cachegrind profiling name.
+	* plugin.xml: Add extension to support cachegrind as memory profiler.
+	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindToolPage.java (setDefaults): Add setting of
+	tool attribute. 
+	
 2010-08-06  Elliott Baron  <ebaron@fedoraproject.org>
 
 	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindLaunchDelegate.java (initializeView): Check that outputs are not null.
